[project]
name = "fastapi-render-tutorial"
version = "0.1.0"
description = "A simple FastAPI tutorial for deploying to Render"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "requests>=2.32.0",
    "python-dotenv>=1.2.1",
    "moviepy>=2.2.1",
    "imageio>=2.37.2",
]
